@@ -5,6 +5,7 @@
 	* Added Helpers.Random.GetRandomItems().
 	* Reduced string formatting overhead in logging system.
 	* Removed oldschool string.Format() style logging methods. Use interpolation.
+	* Added DelegatingDisposable.
 
 13.0.0
 	* .NET Framework specific features now require 4.7.2 because it is 2019.
